<resources>
    <string name="app_name">TH tuàn 4</string>
    <string name="faceboook">Phan Kiên</string>
    <string name="name">Phan Đức Kiên</string>
    <string name="email">phankien110302@gmail.com</string>
    <string name="phone">0374824645</string>
    <string name="instagram">phankien03</string>
    <string name="address">Nghe An, Viet Nam</string>
    <string name="setting">setting</string>
    <string name="user_image">user</string>
    </resources>