<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@drawable/gradient">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

        </RelativeLayout>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/image"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginStart="37dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/image"
            android:fontFamily="sans-serif"
            android:text="@string/address"
            android:textAllCaps="true"
            android:textColor="@color/address"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/setting"
            android:scaleType="centerInside"
            android:src="?android:attr/actionModeWebSearchDrawable"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="105dp"
            android:layout_height="121dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="9dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_image"
            android:padding="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/avt" />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_address"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/image"
            android:text="FOLLOWER"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followersBg"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="453K"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="followers"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followingBg"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="873"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="following"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_below="@+id/linlay1"
        android:layout_marginTop="2dp"
        android:background="#25273E">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/email"
                    android:textColor="#EA6969"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/phone"
                    android:textColor="#EA6969"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Facebook"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/faceboook"
                    android:textColor="#EA6969"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Instagram"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/instagram"
                    android:textColor="#EA6969"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>